# covid-19

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  tasks.py  zappa_settings.json
.github/workflows/: publish.yaml  unit-tests.yaml
covid_19/: __init__.py  api.py  data.py  fetch.py  utils.py  wsgi.py
tests/: test_covid_19.py
