[tool.poetry]
name = "covid-19"
version = "0.1.0"
description = "An API around the https://github.com/CSSEGISandData/COVID-19 dataset"
authors = ["Stephan Fitzpatrick <knowsuchagency@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
pandas = "^1.0.3"
hug = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
invoke = "^1.4.1"
toml = "^0.10.0"
pre-commit = "^2.2.0"

[tool.poetry.scripts]
corona = "covid_19.api:__hug__.cli"
corona-serve = "covid_19.api:__hug__.http.serve"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

